# pitt-biosc1630-2023f

./: .gitignore  .gitlab-ci.yml  .markdownlint.yaml  .pre-commit-config.yaml  Makefile  README.md  build.sh  cleanup-lib-refs.sh  cleanup_printing.py  conda-lock.yml  fix_utterances.py  pyproject.toml  remove_baks  requirements.txt
.githooks/: post-merge
.github/workflows/: gh-pages.yml
.gitsecret/keys/: pubring.kbx  trustdb.gpg
.gitsecret/paths/: mapping.cfg
book/: _config.yml  _toc.yml  index.md  refs.bib  syllabus.md
book/_static/: custom.css
book/activities/: 01-activity-literature-search.md  01-activity-practice-feedback.md  02-activity-active-reading.md  02-activity-active-reading.md.secret  02-activity-reading-for-gist.md  02-activity-reading-for-gist.md.secret  02-activity-role-based-analysis.md  02-activity-role-based-analysis.md.secret  03-activity-reading-for-gist.md.secret  04-activity-active-reading.md.secret  05-activity-role-based-analysis.md.secret  05-activity-role-based-article-analysis.md.secret  05-paper-discussion.md.secret  index.md
book/admin/: class-time.md  drop-in-discussions.md  getting-to-class.md  midterm-evals.md  office-hours.md  omet-survey-midterm.md  omet-survey.md  scheduling.ipynb  sorting_hat.ipynb  sorting_info.yml.secret
book/assignments/: assignment-01.md  assignment-01.md.secret  assignment-02.md  assignment-02.md.secret  index.md  paper-final-draft.md.secret  paper-first-draft.md.secret  partial-draft.md.secret
book/assignments/examples/: article.md  index.md
book/assignments/paper/: final-draft.md  final-draft.md.secret  first-draft.md  guidelines.md  index.md  paper-final-draft.md.secret  paper-first-draft.md  paper-first-draft.md.secret  paper-format-guidelines.md  paper-format-guidelines.md.secret  paper-second-draft.md.secret  second-draft.md  second-draft.md.secret
book/assignments/presentation/: audiences.md  index.md  rubric.md
book/assignments/solutions/: index.md  solution-01.md.secret
book/classes/: class-01.md  class-02.md.secret  class-03.md.secret  class-04.md.secret  class-05.md.secret  class-06.md.secret  class-07.md.secret  class-08.md.secret  class-13.md.secret  class-14.md.secret  class-template.md  index.md
book/classes/activities/: 01-activity-practice-feedback.md  02-activity-active-reading.md  03-activity-method-recommendation.md  03-activity-method-recommendation.md.secret  04-figure-explanations.md.secret  05-ai-paraphrasing-ai-summaries.md.secret  05-ai-paraphrasing-chatgpt-answers.md.secret  05-ai-paraphrasing.md.secret  05-ai-storytelling-ai-summaries.md  (+14 more)
book/easter-egg/: enigma-elites.md  index.md
book/extensions/: dc_metadata.py  identifiers.txt
book/lessons/: index.md  lesson-01.md  lesson-02.md  lesson-03.md.secret  lesson-04.md.secret  lesson-05.md.secret  lesson-06.md.secret  lesson-07.md.secret  lesson-08.md.secret  lesson-09.md.secret  lesson-10.md.secret  lesson-11.md.secret  lesson-12.md.secret  lesson-13.md.secret  lesson-14.md.secret  lesson-15.md.secret
book/misc/: RAND-shopping-study.md  drop-in-discussions.md  easter-egg.md  generative-ai-primer.md  getting-to-class.md  index.md  interfaith-holidays.md  paper-collection.md.secret
book/resources/: comp-bio-topics.md  index.md  refs.bib  refs.md  scheduling.ipynb
book/slides/: index.md  slides-01.md  slides-02.md
book/solutions/: solution-01.md.secret
(+44 files in other folders)
